# Lespass

./: .dockerignore  .gitignore  .gitmodules  2026-04-03-102359-claudemd-guidelinesmd-tech-doclaboutik-ses.txt  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  GUIDELINES.md  LICENSE  OLD_README.md  README.en.md  README.md  README_DRAFT.md  VERSION  bashrc  code_of_conduct-FR.md  contenu_ff_extrait.py  docker-compose-filaos.yml  docker-compose-httpchallenge.yml  docker-compose-laboutik-V1.yml  docker-compose.pre-prod.yml  docker-compose.prod.yml  docker-compose.v1.pre-prod.yml  docker-compose.yml  docker_nightly_push_update.sh  docker_push_update.sh  dockerfile  dockerfile_nightly  empreinte_ff_avant.json  env_example  env_exemple  flush.sh  flush_dev.sh  gunicorn_conf.py  import_membership_csv_exemple.csv  jsconfig.json  launch_celery.sh  launch_celery_prod.sh  launch_test.sh  license_audit.py  (+9 more)
.hallmark/: log.json
DjangoFiles/: dockerfile  from_scratch.sh  install.sh  launch.sh  launch_celery.sh  launch_celery_prod.sh  launch_dev.sh  launch_prod.sh  launch_test.sh  launch_ws.sh  manage.py  pyproject.toml  start.sh
DjangoFiles/Administration/: admin_public.py  admin_tenant.py
DjangoFiles/Administration/management/commands/: cashlessApiKeySetter.py  check_permissions.py  create_public.py  create_tenants.py  createdemo.py  data_test.py  fake_event.py  flush_all.py  load_card.py  load_card_json.py  load_cards.py  pop_demo_data.py  root_fedow.py  stripe_reset.py  test_user.py
DjangoFiles/ApiBillet/: apps.py  serializers.py  tests.py  thread_mailer.py  urls.py  utils.py  validators.py  views.py
DjangoFiles/ApiBillet/templates/invoice/: invoice.html
DjangoFiles/ApiBillet/templates/mails/: buy_confirmation.html  connexion.html  email_generique.html  mail_rapport.html  pairing_terminal.html  validation_email.html
DjangoFiles/ApiBillet/templates/report/: ticketz.html
DjangoFiles/ApiBillet/templates/ticket/: qrtest.html  ticket.html
DjangoFiles/AuthBillet/: apps.py  email.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
DjangoFiles/AuthBillet/migrations/: 0001_initial.py  0002_alter_membership_user.py  0002_auto_20211022_1104.py  0002_tibilletuser_phone.py  0003_auto_20210629_1605.py  0003_auto_20211022_1445.py  0003_delete_membership.py  0004_auto_20211111_1627.py  0005_auto_20211112_1146.py  0006_auto_20211112_1147.py  0007_membership_contribution_value.py  0008_alter_terminalpairingtoken_datetime.py  0013_wallet_tibilletuser_wallet.py
DjangoFiles/AuthBillet/templates/email/: activation.html
DjangoFiles/BaseBillet/: admin.py  apps.py  models.py  signals.py  tasks.py  triggers.py  urls.py  validator.py  validators.py  views.py  x_mvc_views.py
DjangoFiles/BaseBillet/migrations/: 0001_initial.py  0002_auto_20210621_1926.py  0002_auto_20210629_1625.py  0002_auto_20211024_1431.py  0002_auto_20220131_1519.py  0002_auto_20220207_1046.py  0002_auto_20220214_0615.py  0002_paiement_stripe_payment_intent_id.py  0002_paiement_stripe_reservation.py  0002_remove_lignearticle_reste.py  0003_auto_20210629_1627.py  0003_auto_20211031_0931.py  0003_delete_tarifsadhesion.py  0003_event.py  0003_event_options.py  0003_remove_event_tarifs.py  0003_rename_id_stripe_paiement_stripe_checkout_session_id_stripe.py  0004_auto_20210621_2059.py  0004_auto_20210629_1627.py  0004_auto_20220214_0813.py  0004_lignearticle_carte.py  0004_paiement_stripe_source_traitement.py  0004_remove_lignearticle_product.py  0004_reservation_mail_send.py  0005_auto_20210621_2119.py  0005_auto_20210629_1629.py  0005_auto_20211101_1043.py  0005_auto_20220214_0816.py  0005_lignearticle_price.py  0006_alter_event_options_checkbox.py  0006_auto_20210622_1053.py  0006_auto_20210629_1629.py  0006_auto_20211025_0931.py  0006_auto_20211101_1244.py  0007_auto_20210622_1103.py  0007_auto_20210629_1633.py  0007_auto_20211025_0936.py  0007_auto_20211109_1237.py  0007_membership.py  0008_auto_20210629_1654.py  (+132 more)
DjangoFiles/BaseBillet/static/arnaud_mvc/: tibillet.js
DjangoFiles/BaseBillet/templatetags/: in_list.py  not_in_list.py  tibitags.py
DjangoFiles/Customers/: admin.py  models.py
DjangoFiles/Customers/migrations/: 0001_initial.py  0002_alter_client_categorie.py  0002_client_categorie.py  0002_create_tenant_public.py  0003_alter_client_categorie.py  0003_auto_20210623_1351.py
DjangoFiles/MetaBillet/: apps.py  models.py  views.py
DjangoFiles/PaiementStripe/: models.py  urls.py  views.py
DjangoFiles/PaiementStripe/migrations/: 0001_initial.py  0002_auto_20210923_1338.py  0002_auto_20211026_1617.py  0003_auto_20210924_1547.py  0003_auto_20211026_1619.py  0004_paiement_stripe_total.py  0005_auto_20210924_1611.py  0006_delete_configuration_stripe.py  0007_auto_20210925_1027.py  0008_paiement_stripe_metadata_stripe.py
DjangoFiles/QrcodeCashless/: models.py  urls.py  views.py
DjangoFiles/QrcodeCashless/migrations/: 0001_initial.py  0002_auto_20210925_1159.py  0002_cartecashless_user.py  0003_auto_20210925_1208.py  0003_auto_20211111_1219.py  0003_auto_20221022_1034.py  0003_auto_20221022_1043.py  0003_auto_20221022_1317.py  0003_auto_20221101_1820.py  0004_auto_20210925_1224.py  0005_detail_base_url.py  0006_remove_cartecashless_origine.py  0007_detail_origine.py  0008_detail_img_url.py  0009_detail_generation.py  0016_detail_slug.py
DjangoFiles/QrcodeCashless/templates/: RechargementWebUuid.html
DjangoFiles/TiBillet/: asgi.py  celery.py  settings.py  urls.py  urls_public.py  urls_tenants.py  wsgi.py
DjangoFiles/data/: domains_and_cards.py  domains_and_cards_betabillet.py
DjangoFiles/data/csv/: demo.csv  domains_and_cards.py  loader.py
DjangoFiles/fedow_connect/: fedow_api.py  models.py  tests.py  utils.py  validators.py
DjangoFiles/fedow_connect/migrations/: 0003_remove_fedowconfig_fedow_place_wallet_public_pem.py  0004_alter_fedowconfig_fedow_place_admin_apikey.py  0005_fedowconfig_wallet.py
DjangoFiles/llmTB/: apps.py
DjangoFiles/root_billet/: models.py  utils.py
DjangoFiles/tibrss/: apps.py  urls.py  views.py
DjangoFiles/wsocket/: consumers.py  middlewares.py  views.py
(+3549 files in other folders)
