[tool.poetry]
name = "lespass"
version = "0.9.1"
description = "ticketing and membership for federated and cooperative network"
authors = ["Cooperative Code Commun <jturbeaux@pm.me>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14"
requests = "^2.31.0"
pillow = "^11"
django-stdimage = "^6.0.2"
stripe = "^12"
gunicorn = "^23"
sentry-sdk = "^2"
python-dateutil = "^2.8.2"
django-solo = "^2"
django-tenants = "^3.5.0"
Markdown = "^3.5.1"
djangorestframework-simplejwt = "^5"
celery = "^5.3.6"
redis = "^5"
tenant-schemas-celery = "^2"
segno = "^1.5.3"
python-barcode = "^0.15.1"
django-cors-headers = "^4"
channels = {extras = ["daphne"], version = "^4"}
djangorestframework-api-key = "^3.0"
flower = "^2.0.1"
django-htmx = "^1"
authlib = "^1.2.1"
psycopg = "^3"
channels-redis = "^4"
pymemcache = "^4.0.0"
django-weasyprint = "^2.3.1"
weasyprint = "^64"
django-unfold = "^0"
django-import-export = "^4.3"
sib-api-v3-sdk = "^7.6.0"
nh3 = "^0.3.0"
pytest = "^8.4.2"
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
Werkzeug = "^3.0.1"
ipdb = "^0.13.13"
ipython = "^8.18.0"
django-browser-reload = "^1.12.1"
faker = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


