[project]
name = "lespass"
version = "0.9.1"
description = "ticketing and membership for federated and cooperative network"
authors = [{ name = "Cooperative Code Commun", email = "jturbeaux@pm.me" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "AGPLv3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=4.2,<5",
    "djangorestframework>=3.14,<4",
    "requests>=2.31.0,<3",
    "pillow>=11,<12",
    "django-stdimage>=6.0.2,<7",
    "stripe>=12,<13",
    "gunicorn>=23,<24",
    "sentry-sdk>=2,<3",
    "python-dateutil>=2.8.2,<3",
    "django-solo>=2,<3",
    "django-tenants>=3.5.0,<4",
    "Markdown>=3.5.1,<4",
    "djangorestframework-simplejwt>=5,<6",
    "celery>=5.3.6,<6",
    "redis>=5,<6",
    "tenant-schemas-celery>=2,<3",
    "segno>=1.5.3,<2",
    "python-barcode>=0.15.1,<0.16",
    "django-cors-headers>=4,<5",
    "channels[daphne]>=4,<5",
    "djangorestframework-api-key>=3.0,<4",
    "flower>=2.0.1,<3",
    "django-htmx>=1,<2",
    "authlib>=1.2.1,<2",
    "psycopg>=3,<4",
    "channels-redis>=4,<5",
    "pymemcache>=4.0.0,<5",
    "django-weasyprint>=2.3.1,<3",
    "weasyprint>=64,<65",
    "django-unfold>=0,<1",
    "django-import-export>=4.3,<5",
    "sib-api-v3-sdk>=7.6.0,<8",
    "nh3>=0.3.0,<0.4",
    "pytest>=8.4.2,<9",
    "django-simple-captcha>=0.6.2,<0.7",
    "djangorestframework-stubs>=3.16.6,<4",
    "ruff>=0.15.8,<0.16",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.2.0,<5",
    "django-extensions>=3.2.3,<4",
    "Werkzeug>=3.0.1,<4",
    "ipdb>=0.13.13,<0.14",
    "ipython>=8.18.0,<9",
    "django-browser-reload>=1.12.1,<2",
    "faker>=23.2.1,<24",
    "pytest==8.4.2",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"


