[tool.poetry]
name = "lespass"
version = "0.9.1"
description = "ticketing and membership for federated and cooperative network"
authors = ["Cooperative Code Commun <jturbeaux@pm.me>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14"
requests = "^2.31.0"
pillow = "^11"
django-stdimage = "^6.0.2"
stripe = "^12"
gunicorn = "^23"
sentry-sdk = "^2"
python-dateutil = "^2.8.2"
django-solo = "^2"
django-tenants = "^3.5.0"
Markdown = "^3.5.1"
djangorestframework-simplejwt = "^5"
celery = "^5.3.6"
redis = "^5"
tenant-schemas-celery = "^2"
segno = "^1.5.3"
python-barcode = "^0.15.1"
django-cors-headers = "^4"
channels = {extras = ["daphne"], version = "^4"}
djangorestframework-api-key = "^3.0"
flower = "^2.0.1"
django-htmx = "^1"
authlib = "^1.2.1"
psycopg = "^3"
channels-redis = "^4"
pymemcache = "^4.0.0"
django-weasyprint = "^2.3.1"
weasyprint = "^64"
openpyxl = "^3.1"
django-unfold = "^0"
django-import-export = "^4.3"
sib-api-v3-sdk = "^7.6.0"
nh3 = "^0.3.0"
pytest = "^8.4.2"
django-simple-captcha = "^0.6.2"
djangorestframework-stubs = "^3.16.6"
ruff = "^0.15.8"
yamllint = "^1.38.0"
playwright = "^1.60.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
Werkzeug = "^3.0.1"
ipdb = "^0.13.13"
ipython = "^8.18.0"
django-browser-reload = "^1.12.1"
faker = "^23.2.1"
pytest = "8.4.2"
pytest-django = "^4.12.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "TiBillet.settings"
addopts = ""
markers = [
    "integration: integration tests for API v2",
    "onboard: onboard wizard tests (use shared dev DB, no migrations)",
]
filterwarnings = []

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff.lint.per-file-ignores]
# F401 = "import inutilise". NE JAMAIS l'activer sur les fichiers ci-dessous.
#
# Ces fichiers contiennent des IMPORTS A EFFET DE BORD : importer le module EXECUTE
# ses decorateurs (@admin.register, @receiver, @app.task...). Le nom importe n'est
# ensuite jamais reference — un linter le voit donc comme mort, et `ruff check --fix`
# le supprime. L'enregistrement disparait, en silence.
#
# INCIDENT DU 2026-07-13 : `ruff check --fix` a supprime, dans admin_tenant.py :
#     from Administration.admin import (products, prices)
# ProductAdmin n'etait plus enregistre -> `admin.E039` -> Django refuse de demarrer ->
# le serveur tombe et 319 tests partent en erreur (la fixture conftest appelle
# `manage.py test_api_key`, qui ne boote plus).
#
# Le filet de securite complementaire est `tests/pytest/test_django_system_checks.py` :
# il fait echouer la suite des qu'un enregistrement d'admin disparait.
#
# / F401 = "unused import". NEVER enable it on the files below: they hold SIDE-EFFECT
# imports whose whole purpose is to RUN the module's decorators. A linter cannot know
# that, sees them as dead, and `ruff check --fix` deletes them — silently unregistering
# admins, signals and tasks.
"**/admin.py" = ["F401"]
"**/admin_*.py" = ["F401"]
"**/admin/*.py" = ["F401"]
"**/apps.py" = ["F401"]
"**/signals.py" = ["F401"]
"**/triggers.py" = ["F401"]
"**/settings.py" = ["F401"]
"**/__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


